# sub-specie

./: .gitignore  README.md
.claude/: launch.json
ai-journal/: Cargo.toml
ai-journal/src/: lib.rs  test.rs
ai-journal/test_snapshots/test/: accept_beyond_quota_fails.1.json  acceptance_allowed_after_deadline.1.json  claim_before_accept_fails.1.json  claim_survives_close.1.json  discovery_via_journal_meta.1.json  double_accept_fails.1.json  double_claim_fails.1.json  full_cycle_submit_accept_claim_close.1.json  full_cycle_submit_accept_close.1.json  multiple_rounds_have_independent_escrow.1.json  register_after_close_fails.1.json  register_external_submission_after_deadline.1.json  set_curator_transfers_editorial_authority.1.json  submit_after_close_fails.1.json  submit_after_deadline_fails.1.json  unaccepted_submission_has_no_negative_state.1.json
frontend/: index.html  llms.txt
tools/: .call_tx  .capsule0_tx  .capsule1_tx  .capsule2_tx  .capsule3_tx  .gitignore  .guide_tx  .issue1_addendum_tx  .journal_tx  .protocol_tx  gen-wallet.mjs  package-lock.json  package.json  review.mjs  submit.mjs  upload.mjs
tools/docs/: issue-1-addendum-2026-07-07.md  issue-1-call.md  issue-1-coordinates.md  journal.md  participate.md  round-0-call.md  round-0-submission-claude.md
